--- a/style/style.css
+++ b/style/style.css
@@ -6,11 +6,11 @@ html {
 
 .box {
     display: flex;
-    border: white solid;
-    background-color: white;
+    border: red solid;
+    background-color : #17202a  ;
     align-items: center;
     justify-content: center;
-    border-radius: 15px;
+    border-radius: 0px;
     margin-left: 5px;
     height: 100px;
 }
@@ -20,6 +20,7 @@ html {
     font-size: 80px;
     font-weight: bold;
     text-align: center;
+    color: white;
 }
 
 .button {
@@ -43,45 +44,54 @@ html {
 }
 .divText {
     font-size: 20px;
-    text-align: center;
+    text-align: justify;
     font-style: italic;
 }
 .parent {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    margin-top: 30px;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
+    grid-column-gap: 20px;
     grid-row-gap: 0px;
     align-items: center;
     justify-items: center;
     }
     
     .div1 { 
-        grid-area: 1 / 1 / 2 / 2;
+        grid-area:  1 / 2 / 2 / 3;
     
     }
     .div2 { 
-        grid-area: 1 / 2 / 2 / 3; 
+        grid-area: 1 / 3 / 2 / 4; 
         color: white;
         font-family: 'Kanit', sans-serif;
     }
     .div3 {
-        grid-area: 2 / 1 / 3 / 2;
+        grid-area:  2 / 2 / 3 / 3;
         color: white;
         font-family: 'Kanit', sans-serif;
         
     }
     .div4 { 
-        grid-area: 2 / 2 / 3 / 3;
+        grid-area: 2 / 3 / 3 / 4;
     }
     .div5 {
-        grid-area: 3 / 1 / 4 / 2;
+        grid-area: 3 / 2 / 4 / 3;
     }
     .div6 {
-        grid-area: 3 / 2 / 4 / 3;
+        grid-area: 3 / 3 / 4 / 4;
         color: white;
         font-family: 'Kanit', sans-serif;
     } 
+    .div7 {
+        grid-area: 4 / 2 / 5 / 3;
+        color: white;
+        font-family: 'Kanit', sans-serif;
+    }
+    .div8 { 
+        grid-area: 4 / 3 / 5 / 4; 
+    }
 
 
 .downloadPage {
