--- a/style/style.css
+++ b/style/style.css
@@ -6,11 +6,11 @@ html {
 
 .box {
     display: flex;
-    border: red solid;
-    background-color : #17202a  ;
+    border: white solid;
+    background-color : white  ;
     align-items: center;
     justify-content: center;
-    border-radius: 0px;
+    border-radius: 15px;
     margin-left: 5px;
     height: 100px;
 }
@@ -20,7 +20,7 @@ html {
     font-size: 80px;
     font-weight: bold;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .button {
